Fixed heading overflow

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ ul{
     padding: 10px;
     color: #e5e7eb;
     font-size: 2vw;
+    gap:10%;
     
 }
 .hero{
